name:              reacocardnet
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Aren Olson <reacocard@gmail.com>
maintainer:        Aren Olson <reacocard@gmail.com>
synopsis:          Personal website (reacocard.net)
description:       None
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://www.reacocard.net/

Flag deploy
    Description:   Build the deployable executable.
    Default:       False

executable         reacocardnet-test
    if flag(deploy)
        Buildable: False
    main-is:       warpdebug.hs
    build-depends: base         >= 4       && < 5
                 , yesod        >= 0.7     && < 0.8
                 , mime-mail
                 , wai-extra
                 , directory
                 , bytestring
                 , text
                 , template-haskell
                 , hamlet
                 , web-routes
                 , hjsmin
                 , transformers
                 , warp
    ghc-options:   -Wall -threaded

executable         reacocardnet-fastcgi
    if flag(deploy)
        Buildable: True
    else
        Buildable: False
    cpp-options:   -DPRODUCTION
    main-is:       fastcgi.hs
    ghc-options:   -Wall -threaded

    build-depends: base         >= 4       && < 5
                 , yesod        >= 0.7     && < 0.8
                 , mime-mail
                 , wai-extra    >= 0.3     && < 0.4
                 , wai-handler-fastcgi    >= 0.3     && < 0.4
                 , directory
                 , bytestring
                 , text
                 , template-haskell
                 , hamlet
                 , web-routes
                 , hjsmin
                 , transformers
                 , persistent
                 , time

