name:              reacocardnet
version:           0.0.0
license:           MIT
license-file:      LICENSE
author:            Aren Olson <reacocard@gmail.com>
maintainer:        Aren Olson <reacocard@gmail.com>
synopsis:          Personal website (reacocard.net)
description:       None
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://www.reacocard.net/


executable         reacocardnet-fastcgi
    cpp-options:   -DPRODUCTION
    main-is:       fastcgi.hs
    ghc-options:   -Wall -threaded

    build-depends: base         >= 4       && < 5
                 , yesod        >= 0.8     && < 0.9
                 , wai-handler-fastcgi
                 , hamlet
                 , text
                 , persistent
                 , persistent-template
                 , persistent-postgresql
                 , blaze-html
                 , pandoc
                 , old-locale
                 , time

